first triangle on the screen

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,13 +29,31 @@
             "name": "debug vk",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/run_vk.sh",
+            "program": "${workspaceFolder}/build/vk",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "lldb"
+            "MIMode": "lldb",
+            "environment": [
+                {
+                    "name": "PATH",
+                    "value": "/Users/alex/thirdparty/VulkanSDK/1.3.283.0/macOS/bin:${env:PATH}"
+                },
+                {
+                    "name": "DYLD_LIBRARY_PATH",
+                    "value": "/Users/alex/thirdparty/VulkanSDK/1.3.283.0/macOS/lib:${env:DYLD_LIBRARY_PATH}"
+                },
+                {
+                    "name": "VK_ICD_FILENAMES",
+                    "value": "/Users/alex/thirdparty/VulkanSDK/1.3.283.0/macOS/share/vulkan/icd.d/MoltenVK_icd.json"
+                },
+                {
+                    "name": "VK_LAYER_PATH",
+                    "value": "/Users/alex/thirdparty/VulkanSDK/1.3.283.0/macOS/share/vulkan/explicit_layer.d"
+                }
+            ],
         }
     ]
 }
