prototype diff function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "limits": "c",
         "ratio": "c",
         "tuple": "c",
-        "__config": "c"
+        "__config": "c",
+        "math.h": "c"
     }
 }
