--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/casc",
+            "program": "${workspaceFolder}/build/casc",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
