--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "tuple": "c",
         "__config": "c",
         "math.h": "c",
-        "ios": "c"
+        "ios": "c",
+        "complex": "c"
     }
 }
