--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "name": "debug --test",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/casc",
+            "program": "${workspaceFolder}/build/casc",
             "args": ["--test"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
